--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -24,3 +24,9 @@ body {
 .test {
 	font-family: $raleway;
 }
+
+//BEM blocks
+@import "./burger.scss";
+@import "./header.scss";
+@import "./logo.scss";
+@import "./nav.scss";
