--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -25,8 +25,24 @@ body {
 	font-family: $raleway;
 }
 
+.wrapper {
+	min-height: 100%;
+	display: flex;
+	flex-direction: column;
+
+	&__main {
+		flex: 1 1 auto;
+	}
+
+	&__footer {
+		flex-shrink: 0
+	}
+}
+
 //BEM blocks
 @import "./burger.scss";
 @import "./header.scss";
 @import "./logo.scss";
 @import "./nav.scss";
+@import "./footer.scss";
+@import "./icons.scss";
