--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -7,13 +7,14 @@
 	z-index: 10;
 
 	&__body {
+		height: 72px;
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
-		padding: 20px 10px 22px 10px;
+		padding: 0px 10px;
 
 		@media (max-width: 1199px) {
-			padding: 30px 10px 34px 10px;
+			height: 90px;
 		}
 	}
 
