--- a/src/scss/tabs.scss
+++ b/src/scss/tabs.scss
@@ -19,6 +19,9 @@
 
 	&__controls-list {
 		position: relative;
+		border-radius: 3px;
+		overflow: hidden;
+		box-shadow: 0px 1px 1px 0px rgb(180, 180, 180);
 
 		@media (max-width: 1023px) {
 			display: flex;
@@ -68,6 +71,7 @@
 		text-transform: uppercase;
 		color: $wh;
 		background-color: #333333;
+		box-shadow: 1px 1px 1px 0px rgb(180, 180, 180);
 
 		@media (max-width: 1023px) {
 			&:not(:last-child) {
