--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -3,7 +3,7 @@
 
 //Fonts
 @import "https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap";
-@import "https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap"; 
+@import "https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,400;1,300;1,400&display=swap"; 
 
 html {
 	height: 100%;
@@ -65,4 +65,8 @@ body {
 @import "./city.scss";
 @import "./tabs.scss";
 @import "./btn.scss";
-@import "./fulscreen.scss";
+@import "./fullscreen.scss";
+@import "./btn.scss";
+@import "./title.scss";
+@import "./modern.scss";
+@import "./trial-form.scss";
