--- a/src/scss/var.scss
+++ b/src/scss/var.scss
@@ -2,10 +2,13 @@
 //Paint
 $bl: #000000;
 $wh: #ffffff;
+$gr: #f5f5f5;
+$darkgr: #bdbdbd;
 $orange: #ff8b38;
 $lightorange: #ff9b51;
 
 //Headings
+$hcwihte: #ffffff;
 $hclight: #333333;
 $hc: #212121;
 $hcdark: #000000;
