--- a/src/scss/sublist.scss
+++ b/src/scss/sublist.scss
@@ -1,5 +1,35 @@
 .sublist {
 
+	&_dark {
+		background-color: #f5f5f5;
+	}
+
+	&_reverse {
+		.sublist__flex {
+			flex-direction: row-reverse;
+
+			@media (max-width: 1199px) {
+				flex-direction: column-reverse;
+			}
+		}
+
+		.sublist__flex-left {
+			padding: 0px 10px 0px 90px;
+
+			
+			@media (max-width: 1199px) {
+				padding: 0px 0px 0px 0px;
+			}
+		}
+		.sublist__flex-right {
+			padding: 0px 100px 0px 20px;
+
+			@media (max-width: 1199px) {
+				padding: 0px 0px 0px 0px;
+			}
+		}
+	}
+
 	&__content {
 	}
 
@@ -107,7 +137,9 @@
 	}
 
 	&__text {
-		margin-bottom: 40px;
+		&:not(:last-child) {
+			margin-bottom: 40px;
+		}
 		padding-right: 15px;
 
 		@media (max-width: 1199px) {
@@ -115,7 +147,9 @@
 		}
 
 		@media (max-width: 450px) {
-			margin-bottom: 25px;
+			&:not(:last-child) {
+				margin-bottom: 25px;
+			}
 		}
 	}
 
