Added why block

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -73,4 +73,6 @@ body {
 @import "./trial-form.scss";
 @import "./sublist.scss";
 @import "./icon-text.scss";
+@import "./why.scss";
+@import "./text-column.scss";
 @import "./circle-icon.scss";
