--- a/src/scss/title.scss
+++ b/src/scss/title.scss
@@ -1,11 +1,12 @@
 .title {
 	position: relative;
-	padding-bottom: 26px;
+	padding-bottom: 22px;
 	font-family: $raleway;
 	font-size: $h2;
 	color: $hc;
 	line-height: 1.3em;
 	text-align: center;
+	text-transform: uppercase;
 
 	@media (max-width: 767px) {
 		font-size: 1.8rem;
