--- a/src/scss/var.scss
+++ b/src/scss/var.scss
@@ -7,6 +7,9 @@ $darkgr: #bdbdbd;
 $orange: #ff8b38;
 $lightorange: #ff9b51;
 
+$bgcolor: #f5f5f5;
+$bgcolor-dark: #333333;
+
 //Headings
 $hcwihte: #ffffff;
 $hclight: #333333;
