Added review block

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -77,3 +77,5 @@ body {
 @import "./text-column.scss";
 @import "./circle-icon.scss";
 @import "./price-card.scss";
+@import "./review.scss";
+@import "./author.scss";
