--- a/src/scss/block.scss
+++ b/src/scss/block.scss
@@ -116,4 +116,16 @@
 			max-width: 100%;
 		}
 	}
+
+	&__review {
+		max-width: 275px;
+
+		@media (max-width: 767px) {
+			max-width: 400px;
+		}
+
+		@media (max-width: 449px) {
+			max-width: 320px;
+		}
+	}
 }
