--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -27,6 +27,11 @@ body {
 		line-height: 1.2rem;
 		font-size: 0.8125rem;
 	}
+
+	*:focus {
+		outline: solid $orange 2px;
+		border-radius: 4px;
+	}
 }
 
 .locked {
